# mindmirror-ai

./: AGENTS.md  AGENT_TRIGGERS.md  APPROVAL_FLOW.md  DIR_COMPATIBILITY.md  MANAGER_MODE.md  MindMirror-AI-Development-Plan.md  PRODUCT_MANAGER_SETUP.md  SCHEDULING.md  SMART_TEAM_SETUP_COMPLETE.md  TEAM_OUTPUT_DIRS.md  WORKSPACE_CONSTITUTION.md
.clawhub/: lock.json
code/mindmirror/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
code/mindmirror/configs/: settings.yaml
code/mindmirror/configs/prompts/: therapist.md
code/mindmirror/deploy/: README.md  deploy.sh  docker-compose.prod.yml  nginx.conf  update.sh
code/mindmirror/docs/: AGENT_DESIGN_GUIDE.md  TECHNICAL_ARCHITECTURE.md
code/mindmirror/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
code/mindmirror/frontend/src/: App.tsx  index.css
code/mindmirror/knowledge_base/academic/: exam_anxiety.md  study_stress.md
code/mindmirror/knowledge_base/assessments/: scales.md
code/mindmirror/knowledge_base/behavioral/: behavioral_psychology.md
code/mindmirror/knowledge_base/cbt/: cbt_core.md  cbt_exercises.md
code/mindmirror/knowledge_base/crisis/: crisis_intervention.md
code/mindmirror/knowledge_base/emotion_management/: anger_management.md  emotion_regulation.md
code/mindmirror/knowledge_base/family/: family_therapy.md  parent_child.md
code/mindmirror/knowledge_base/mindfulness/: breathing_exercises.md  mindfulness_basics.md
code/mindmirror/src/: __init__.py
code/mindmirror/tests/: test_agent.py  test_api.py  test_emotion.py
(+207 files in other folders)
