[project]
name = "mindmirror-ai"
version = "0.1.0"
description = "AI-powered mental health companion for youth"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "crewai>=0.80.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "qdrant-client>=1.12.0",
    "openai>=1.40.0",
    "zhipuai>=2.1.0",
    "deepface>=0.0.93",
    "opensmile>=2.5.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.10.0",
    "xgboost>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
